manifest/node-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: mahmudarif/node-backend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      # imagePullSecrets:
      #   - name: myregistrysecret
