manifest/ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kivana-demo
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: kivana-ingress
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    
spec:
  ingressClassName: my-ingress-class   # Ingress Class                       
  rules:
    - http:
        paths:
        - path: / 
          pathType: Prefix
          backend:
            service:
              name: kibana-kibana
              port:
                number: 5601
